--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
     </div>
 
-    <h1 style="text-align: center;">  camisa 1</h1>
+    <h1 style="text-align: center;"> R$ 80 </h1>
     
 
     <div class="imagem2">
