--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@
 
   <div class="container2">
       <div class="row">
-          <div class="card-01"><h1>acessórios</h1></div>
-          <div class="card-01"><h1>shorts</h1></div>
-          <div class="card-01"><h1>calças</h1></div>
+        <div class="card-03"><h1>camisas</h1></div>
       </div>
       <div class="row">
-          <div class="card-02"><h1>casacos</h1></div>
-          <div class="card-02"><h1>jacketas</h1></div>
+        <div class="card-03"><h1>camisas</h1></div>
       </div>
       <div class="row">
           <div class="card-03"><h1>camisas</h1></div>
@@ -76,7 +73,7 @@
       </div>
   </div>
 
-    <section style="height:1000px"></section>
+   
     <script src="script.js"></script>
   </body>
 </html>
