criando a pagina de compra

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#" class="nav-links"> lançamentos</a>
             </li>
             <li>
-              <a href="#" class="nav-links"> NFTs</a>
+              <a href="" class="nav-links"> NFTs</a>
             </li>
             <li>
               <a href="#" class="nav-links"> cadastro</a>
@@ -62,13 +62,19 @@
 
   <div class="container2">
       <div class="row">
-        <div class="card-03"><h1>camisas</h1></div>
+        <div class="card-03">
+          <a href="compra.html">R$ 79.99</a>
+        </div>
       </div>
       <div class="row">
-        <div class="card-03"><h1>camisas</h1></div>
+        <div class="card-03">
+          <a href="compra.html">R$ 79.99</a>
+        </div>
       </div>
       <div class="row">
-          <div class="card-03"><h1>camisas</h1></div>
+          <div class="card-03">
+            <a href="compra.html">R$ 79.99</a>
+          </div>
           
       </div>
   </div>
