--- a/compra.html
+++ b/compra.html
@@ -11,9 +11,11 @@
 <body>
 
    <div class="menu-compra">
-       <div imagem-logo>
+       <div clas="imagem-logo">
            <img src="soho.png">
        </div>
+
+       
    </div>
 
    <div class="voltar">
