--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#" class="nav-links"> lançamentos</a>
             </li>
             <li>
-              <a href="" class="nav-links"> NFTs</a>
+              <a href="https://opensea.io/SohoRats" class="nav-links"> NFTs</a>
             </li>
             <li>
               <a href="#" class="nav-links"> cadastro</a>
