--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
         <input type="radio" name="slide" id="slide5">
   
         <div class="slide s1" >
-          <img src="yasuo.jpg" alt="">
+          <img src="/imgs soho/IMG_9268.JPG" alt="">
         </div>
         <div class="slide ">
-          <img src="yasuo.jpg" alt="">
+          <img src="/imgs soho/IMG_9337.JPG" alt="">
         </div>
         <div class="slide">
-          <img src="yasuo.jpg" alt="">
+          <img src="/imgs soho/IMG_9352.JPG" alt="">
         </div>
         <div class="slide">
-          <img src="yasuo.jpg" alt="">
+          <img src="/imgs soho/IMG_9430.JPG" alt="">
         </div>
         <div class="slide">
-          <img src="yasuo.jpg" alt="">
+          <img src="/imgs soho/IMG_9476.JPG" alt="">
         </div>
   
         
