--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <li>
               <a href="https://opensea.io/SohoRats" class="nav-links"> NFTs</a>
             </li>
-            <li>
-              <a href="#" class="nav-links"> cadastro</a>
-            </li>
+           
           </ul>
          
         </div>
@@ -74,6 +72,13 @@
         <label class="bar" for="slide5"></label>
       </div>
   
+    </div>
+
+    <div class="texto-sobre">
+      <div class="texto">
+        <h2>Sobre Nós</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur neque, odit nesciunt repellat labore molestias. Veritatis minus tempora iure, hic, blanditiis ipsam deleniti debitis accusamus rerum provident dolores! Explicabo, eveniet!</p>
+      </div>
     </div>
   </section>
   
